@startuml

package dao {


    abstract class HistoryDao{
        # {static} HistoryDao()
        - {static} LazyHolder()
        + {static} getInstance() : HistoryDao
        getAllOffersFromHistory(userId : int): Offer[]
        getOffererFromOfferId(offerId : int) : User
        getAlreadyRated(userId : int, offerId : int) : boolean
    }
    class HistoryDaoMySQL
    AbstractFactoryDao <|-- FactoryDaoMySQL
    HistoryDao <|-- HistoryDaoMySQL

    interface DAO<T>{
        find(id : int) : T
        create(T obj) : T
        update(T obj) : T
        delete(T obj) : boolean
    }

    abstract AbstractFactoryDao{
        - {static} final connectionDB : ConnectionDB
        + {static} getFactory(type : TypeDB) : AbstractFactoryDao
        + getHistoryDao() : HistoryDao
    }

    class FactoryDaoMySQL{
    }


    DAO <|.. HistoryDao
}
package db{
    class ConnectionDBMySQL{
        - connection : Connection
        - ConnectionDBMySQL()
        + {static} getInstance() : ConnectionDBMySQL
        + getDb() : Connection
    }

    class LazyHolderDB{
        + {static} final INSTANCE : ConnectionDBMySQL
    }
    interface ConnectionDB
    ConnectionDBMySQL -Left-> LazyHolderDB
    ConnectionDBMySQL .up.|> ConnectionDB

}
package business{
    class SessionFacade{
            + getUser() : User
        }

    class HistoryFacade{
        + viewAllOffersFromHistory(userId : int) : Offer[]
        + newRate(userId : int, offerId : int)
    }

    class Offer{
        -offerId : int
        -title : String
        -pricePerDay : int
        -description : String
        -toolState : String
        -isPriority : boolean
        -userId : int
        -categoryId : int
        + Offer(...)
        + getOfferId() : int
        + getTitle() : String
        + getPricePerDay() : int
        + getDescription() : String
        + getUserId() : int
        + getCategoryId() : int
        + setTitle(title:String) : void
        + setDescription(description:String) : void
        + setPricePerDay(price:int) : void
        + setUserId(userId:int) : void
        + setCategoryId(categoryId:int) : void
        + setIsPriority(b:boolean) : void
    }
    HistoryFacade --> SessionFacade

}

package gui{

    class LoadView{
        + {static} load(nameFxml : Parent) : Parent
        + {static} changeScreen(actionEvent : ActionEvent, view : String) : void
    }

    package controller{
        class HistoryController{
            - infos_offer : ListView
            - commentArea : JTextArea
            - rateArea : JButtonBar
            + handleOffersFromHistory(actionEvent : ActionEvent) : void
            + handleNewRate(actionEvent : ActionEvent) : void

        }
    }
}
HistoryFacade <--Up- HistoryController
HistoryDao --> AbstractFactoryDao
HistoryFacade --> HistoryDao



@enduml